--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xorg-dev libgl1-mesa-dev
 
+    - name: Run Tests
+      run: go test -v ./...
+
     - name: Build
       run: go build -v -o ${{ matrix.output_name }}
 
