--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,12 +46,15 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: go test -v ./... # Run all tests including screenshots
 
-    - name: Upload Screenshots
+    - name: Upload Screenshots as Artifact
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
       with:
         name: screenshots
-        path: screenshots/
+        path: |
+          screenshots/initial_state.png
+          screenshots/working_session.png
+          screenshots/break_state.png
         if-no-files-found: error
 
     - name: Build
