--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4
       with:
-        name: screenshots
+        name: inital_state.png
         path: screenshots/initial_state.png
         if-no-files-found: error
 
